Rename CMake subproject library to base_runtime
Issue #15

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,5 +54,5 @@ include("${ELROND_COMMON_DIR}/build/elrond.cmake")
 find_package(Threads REQUIRED)
 
 # Add subprojects
-add_subdirectory(library)
+add_subdirectory(base_runtime)
 add_subdirectory(test)
