--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,10 @@ project(
     LANGUAGES CXX
 )
 
+# Copy External example module from common project tests
+file(GLOB EXT_MODULE_FILE "${ELROND_COMMON_DIR}/build/test/ExternalModule.*")
+configure_file(${EXT_MODULE_FILE} ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
+
 # Search for test cases source files
 file(GLOB_RECURSE SRC_TEST_CASES_FILES "${PROJECT_SOURCE_DIR}/*.cpp")
 
