--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -13,10 +13,8 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
-            - name: Init submodules
-              uses: srt32/git-actions@v0.0.3
               with:
-                args: git submodule update --init --recursive
+                 submodules: recursive
             - name: Building Elrond Common Library project
               run: |
                 cd elrond && \
