--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -46,9 +46,8 @@ jobs:
                 arch: ${{matrix.arch}}
             - name: Building Elrond Common Library project
               run: |
-                cd elrond \
-                && cmake -B.\build -G "NMake Makefiles" . \
-                && cmake --build ./build --target all --
+                cd elrond && cmake -B.\build -G "NMake Makefiles" .
+                cd elrond && cmake --build ./build --target all --
             - name: Build everything
               run: cmake --build ./build --target all --
             - name: Run tests
