--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,11 +15,11 @@ jobs:
               uses: actions/checkout@v2
               with:
                  submodules: recursive
-            - name: Building Elrond Common Library project
+            - name: Building Elrond Common Library
               run: |
-                cd elrond \
-                && cmake -B./build -G "Unix Makefiles" . \
-                && cmake --build ./build --target all -j 6 -- 
+                cd elrond
+                cmake -B./build -G "Unix Makefiles" .
+                cmake --build ./build --target all -j 6 -- 
             - name: Run CMake
               run: cmake -B./build -G "Unix Makefiles" .
             - name: Build everything
@@ -44,10 +44,11 @@ jobs:
               uses: seanmiddleditch/gha-setup-vsdevenv@master
               with:
                 arch: ${{matrix.arch}}
-            - name: Building Elrond Common Library project
+            - name: Building Elrond Common Library
               run: |
-                cd elrond && cmake -B.\build -G "NMake Makefiles" .
-                cd elrond && cmake --build ./build --target all --
+                cd elrond
+                cmake -B.\build -G "NMake Makefiles" .
+                cmake --build ./build --target all --
             - name: Build everything
               run: cmake --build ./build --target all --
             - name: Run tests
