--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,7 +9,7 @@ jobs:
 
         strategy:
             matrix:
-                os: [ubuntu-latest, macos-latest]
+                os: [ubuntu-latest, macos-latest, ubuntu-18.04, macos-10.15]
         steps:
             - name: Checkout code
               uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
 
         strategy:
             matrix:
-                os: [windows-latest]
+                os: [windows-latest, windows-2019]
                 arch: [amd64, x86]
         steps:
             - name: Checkout code
