--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -15,7 +15,7 @@ jobs:
               uses: actions/checkout@v2
               with:
                  submodules: recursive
-            - name: Building Elrond Common Library
+            - name: Build Elrond Common Library
               run: |
                 cd elrond
                 cmake -B./build -G "Unix Makefiles" .
@@ -44,7 +44,7 @@ jobs:
               uses: seanmiddleditch/gha-setup-vsdevenv@master
               with:
                 arch: ${{matrix.arch}}
-            - name: Building Elrond Common Library
+            - name: Build Elrond Common Library
               run: |
                 cd elrond
                 cmake -B.\build -G "NMake Makefiles" .
