[cli] Add nlohmann json library and JsonConfig class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,5 +58,6 @@ message(STATUS "Including \"${ELROND_COMMON_BASE_DIR}/build/elrond.cmake\" from 
 
 # Add subprojects
 add_subdirectory(vendor/argumentum)
+add_subdirectory(vendor/nlohmann_json)
 add_subdirectory(runtime)
 add_subdirectory(elrond_cli)
